--- a/admin.html
+++ b/admin.html
@@ -1,27 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Admin Panel - Add Product</title>
-  <!-- Firebase App (the core Firebase SDK) -->
+  <title>Admin Panel - Manage Products</title>
+  <!-- Firebase libraries (compat versions for easier usage) -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <!-- Firebase Firestore -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-  <script>
-    // Replace these values with your Firebase project configuration
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-  </script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -30,15 +15,14 @@
       padding: 20px;
     }
     .container {
-      max-width: 600px;
+      max-width: 800px;
       background: #fff;
       padding: 20px;
       margin: auto;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    h2 {
+    h2, h3 {
       text-align: center;
-      margin-bottom: 20px;
     }
     .form-group {
       margin-bottom: 15px;
@@ -69,12 +53,110 @@
       font-weight: bold;
       text-align: center;
     }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+    table, th, td {
+      border: 1px solid #ddd;
+    }
+    th, td {
+      padding: 8px;
+      text-align: left;
+    }
+    th {
+      background-color: #007bff;
+      color: #fff;
+    }
+    img {
+      max-width: 60px;
+      height: auto;
+    }
   </style>
+  <script>
+    // Replace the placeholder values with your Firebase project configuration
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "e-commerce-pk.firebaseapp.com",
+      projectId: "e-commerce-pk",
+      storageBucket: "e-commerce-pk.appspot.com",
+      messagingSenderId: "YOUR_SENDER_ID",
+      appId: "YOUR_APP_ID"
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+
+    // Function to add a product
+    function addProduct(e) {
+      e.preventDefault();
+      const name = document.getElementById('name').value;
+      const price = parseFloat(document.getElementById('price').value);
+      const description = document.getElementById('description').value;
+      const image = document.getElementById('image').value;
+
+      db.collection('products').add({
+        name: name,
+        price: price,
+        description: description,
+        image: image,
+        createdAt: firebase.firestore.FieldValue.serverTimestamp()
+      }).then(() => {
+        document.getElementById('message').innerText = "Product added successfully!";
+        document.getElementById('adminForm').reset();
+        fetchProducts(); // Refresh product list
+      }).catch((error) => {
+        document.getElementById('message').innerText = "Error: " + error.message;
+      });
+    }
+
+    // Function to fetch and display products
+    function fetchProducts() {
+      db.collection('products').orderBy('createdAt', 'desc').get().then((querySnapshot) => {
+        const tableBody = document.getElementById('productsTableBody');
+        tableBody.innerHTML = "";
+        querySnapshot.forEach((doc) => {
+          const product = doc.data();
+          const row = document.createElement('tr');
+          row.innerHTML = `
+            <td>${doc.id}</td>
+            <td>${product.name}</td>
+            <td>${product.price}</td>
+            <td>${product.description}</td>
+            <td>${product.image ? `<img src="${product.image}" alt="${product.name}">` : "No Image"}</td>
+            <td><button onclick="deleteProduct('${doc.id}')">Delete</button></td>
+          `;
+          tableBody.appendChild(row);
+        });
+      }).catch((error) => {
+        console.error("Error fetching products: ", error);
+      });
+    }
+
+    // Function to delete a product
+    function deleteProduct(id) {
+      if (confirm("Are you sure you want to delete this product?")) {
+        db.collection('products').doc(id).delete().then(() => {
+          document.getElementById('message').innerText = "Product deleted successfully!";
+          fetchProducts();
+        }).catch((error) => {
+          document.getElementById('message').innerText = "Error: " + error.message;
+        });
+      }
+    }
+
+    // Fetch products on page load
+    window.onload = function() {
+      fetchProducts();
+    };
+  </script>
 </head>
 <body>
   <div class="container">
-    <h2>Admin Panel - Add Product</h2>
-    <form id="adminForm">
+    <h2>Admin Panel - Manage Products</h2>
+    <form id="adminForm" onsubmit="addProduct(event)">
       <div class="form-group">
         <label for="name">Product Name</label>
         <input type="text" id="name" placeholder="Enter product name" required>
@@ -91,32 +173,25 @@
         <label for="image">Image URL</label>
         <input type="url" id="image" placeholder="Enter image URL">
       </div>
-      <button type="submit">Submit</button>
+      <button type="submit">Add Product</button>
     </form>
     <p id="message"></p>
+    <h3>Product List</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Name</th>
+          <th>Price (PKR)</th>
+          <th>Description</th>
+          <th>Image</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody id="productsTableBody">
+        <!-- Products will be listed here dynamically -->
+      </tbody>
+    </table>
   </div>
-
-  <script>
-    document.getElementById('adminForm').addEventListener('submit', (e) => {
-      e.preventDefault();
-      const name = document.getElementById('name').value;
-      const price = parseFloat(document.getElementById('price').value);
-      const description = document.getElementById('description').value;
-      const image = document.getElementById('image').value;
-
-      // Save data into a "products" collection in Firestore
-      db.collection('products').add({
-        name: name,
-        price: price,
-        description: description,
-        image: image,
-        createdAt: firebase.firestore.FieldValue.serverTimestamp()
-      }).then(() => {
-        document.getElementById('message').innerText = "Product added successfully!";
-      }).catch((error) => {
-        document.getElementById('message').innerText = "Error adding product: " + error;
-      });
-    });
-  </script>
 </body>
 </html>
