--- a/public/admin.html
+++ b/public/admin.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Admin Panel - Edit Page Content</title>
-  <!-- Firebase Libraries (compat versions) -->
+  <!-- Firebase Libraries (compat.versions) -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
   <style>
