--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>MyBusiness Premium</title>  
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- External Custom CSS -->
+    <!-- External custom CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- Inline styles for layout, hero section, and features -->
     <style>
