--- a/public/admin.html
+++ b/public/admin.html
@@ -23,6 +23,7 @@
       color: #ecf0f1;
       padding: 20px;
       overflow-y: auto;
+      transition: transform 0.3s ease-in-out;
     }
     .sidebar h2 { margin-bottom: 15px; }
     .sidebar ul { list-style: none; }
@@ -60,11 +61,52 @@
     }
     button:hover { background-color: #2ecc71; }
     .message { margin-top: 10px; font-weight: bold; }
+
+    /* Mobile Styles */
+    @media (max-width: 768px) {
+      body {
+        flex-direction: column;
+      }
+      .sidebar {
+        width: 100%;
+        height: auto;
+        position: fixed;
+        top: 0;
+        left: 0;
+        transform: translateY(-100%);
+        z-index: 1000;
+      }
+      .sidebar.active {
+        transform: translateY(0);
+      }
+      .content {
+        margin-top: 60px; /* Ensure space for the toggle button */
+      }
+      /* Menu toggle button visible on mobile */
+      .menu-toggle {
+        display: block;
+        background-color: #2c3e50;
+        color: #ecf0f1;
+        border: none;
+        padding: 15px;
+        font-size: 18px;
+        cursor: pointer;
+        width: 100%;
+        text-align: left;
+      }
+    }
+    /* Desktop Styles */
+    .menu-toggle {
+      display: none;
+    }
   </style>
 </head>
 <body>
+  <!-- Mobile menu toggle button -->
+  <button class="menu-toggle" id="menuToggle">☰ Menu</button>
+  
   <!-- Sidebar for Page Navigation -->
-  <div class="sidebar">
+  <div class="sidebar" id="sidebar">
     <h2>Pages</h2>
     <ul id="pagesList">
       <!-- List of pages will be dynamically populated -->
@@ -133,6 +175,10 @@
           Array.from(pagesList.children).forEach(child => child.classList.remove("active"));
           li.classList.add("active");
           loadPageContent(page);
+          // Hide sidebar on mobile after selection
+          if (window.innerWidth <= 768) {
+            document.getElementById("sidebar").classList.remove("active");
+          }
         });
         pagesList.appendChild(li);
       });
@@ -195,6 +241,13 @@
       loadPageContent(pages[0]);
       pagesList.firstChild.classList.add("active");
     }
+
+    // Mobile menu toggle functionality
+    const menuToggle = document.getElementById("menuToggle");
+    menuToggle.addEventListener("click", () => {
+      const sidebar = document.getElementById("sidebar");
+      sidebar.classList.toggle("active");
+    });
   </script>
 </body>
 </html>
