--- a/public/admin.html
+++ b/public/admin.html
@@ -61,7 +61,7 @@
     }
     button:hover { background-color: #2ecc71; }
     .message { margin-top: 10px; font-weight: bold; }
-
+    
     /* Mobile Styles */
     @media (max-width: 768px) {
       body {
@@ -80,7 +80,7 @@
         transform: translateY(0);
       }
       .content {
-        margin-top: 60px; /* Ensure space for the toggle button */
+        margin-top: 60px; /* space for the mobile menu button */
       }
       /* Menu toggle button visible on mobile */
       .menu-toggle {
@@ -102,7 +102,7 @@
   </style>
 </head>
 <body>
-  <!-- Mobile menu toggle button -->
+  <!-- Mobile menu toggle button (visible on screens <=768px) -->
   <button class="menu-toggle" id="menuToggle">☰ Menu</button>
   
   <!-- Sidebar for Page Navigation -->
