--- a/public/admin.html
+++ b/public/admin.html
@@ -6,7 +6,7 @@
   <title>NextGen Admin Panel</title>
   <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <!-- Bootstrap 5 CSS for rapid responsive design -->
+  <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     /* Global Styles */
@@ -20,15 +20,12 @@
       min-height: 100vh;
       overflow-x: hidden;
     }
-    /* Sidebar Styling */
+    /* Sidebar Styles */
     .sidebar {
-      min-width: 250px;
+      width: 250px;
       background: #343a40;
       color: #fff;
-      transition: all 0.3s;
-    }
-    .sidebar.collapsed {
-      margin-left: -250px;
+      transition: transform 0.3s ease;
     }
     .sidebar .sidebar-header {
       padding: 20px;
@@ -53,7 +50,7 @@
     .sidebar ul li i {
       margin-right: 10px;
     }
-    /* Main Content Styling */
+    /* Main Content Styles */
     .content {
       flex: 1;
       padding: 20px;
@@ -71,12 +68,36 @@
     .top-navbar .toggle-btn {
       font-size: 1.5rem;
       cursor: pointer;
+      display: none;
     }
-    @media (max-width: 768px) {
+    /* Desktop Styles */
+    @media (min-width: 768px) {
+      .sidebar {
+        position: relative;
+        transform: none;
+      }
+      .content {
+        margin-left: 250px;
+      }
+      .top-navbar .toggle-btn {
+        display: none;
+      }
+    }
+    /* Mobile Styles */
+    @media (max-width: 767.98px) {
       .sidebar {
         position: fixed;
+        top: 0;
+        left: 0;
         height: 100%;
-        z-index: 1000;
+        transform: translateX(-100%);
+        z-index: 1050;
+      }
+      .sidebar.open {
+        transform: translateX(0);
+      }
+      .top-navbar .toggle-btn {
+        display: block;
       }
       .content {
         margin-left: 0;
@@ -92,9 +113,7 @@
   <div class="wrapper">
     <!-- Sidebar Navigation -->
     <nav class="sidebar" id="sidebar">
-      <div class="sidebar-header">
-        Admin Panel
-      </div>
+      <div class="sidebar-header">Admin Panel</div>
       <ul class="components">
         <li class="active" data-target="dashboard"><i class="fas fa-tachometer-alt"></i> Dashboard</li>
         <li data-target="pages"><i class="fas fa-file-alt"></i> Pages</li>
@@ -296,26 +315,25 @@
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Toggle sidebar on mobile view
+    // Mobile sidebar toggle functionality
     document.getElementById("toggle-btn").addEventListener("click", function() {
-      document.getElementById("sidebar").classList.toggle("collapsed");
+      document.getElementById("sidebar").classList.toggle("open");
     });
-    
     // Navigation: switch content sections based on sidebar clicks
     const navItems = document.querySelectorAll(".sidebar ul li");
     navItems.forEach(item => {
       item.addEventListener("click", function() {
-        // Remove active state from all items
         navItems.forEach(i => i.classList.remove("active"));
         this.classList.add("active");
-        // Hide all content sections
         const sections = document.querySelectorAll(".content-section");
         sections.forEach(section => section.classList.add("d-none"));
-        // Show the targeted section
         const target = this.getAttribute("data-target");
         document.getElementById(target).classList.remove("d-none");
-        // Update the top navbar title
         document.querySelector(".top-navbar h4").innerText = this.innerText;
+        // On mobile, close the sidebar after selecting a section
+        if (window.innerWidth < 768) {
+          document.getElementById("sidebar").classList.remove("open");
+        }
       });
     });
   </script>
