--- a/public/admin.html
+++ b/public/admin.html
@@ -107,6 +107,32 @@
     .card {
       margin-bottom: 20px;
     }
+    /* Pages Section Styles */
+    .pages-container {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .pages-list {
+      width: 100%;
+      max-width: 250px;
+      border-right: 1px solid #ddd;
+    }
+    .pages-list ul {
+      list-style: none;
+      padding: 0;
+    }
+    .pages-list ul li {
+      padding: 10px 15px;
+      cursor: pointer;
+      border-bottom: 1px solid #eee;
+    }
+    .pages-list ul li:hover, .pages-list ul li.active {
+      background: #f0f0f0;
+    }
+    .page-edit-form {
+      flex: 1;
+      padding: 15px;
+    }
   </style>
 </head>
 <body>
@@ -187,18 +213,36 @@
         <!-- Pages Management Section -->
         <div id="pages" class="content-section d-none">
           <h4>Manage Pages</h4>
-          <p>Edit and update website pages including Home, Products, Offers, etc.</p>
-          <form>
-            <div class="mb-3">
-              <label for="pageTitle" class="form-label">Page Title</label>
-              <input type="text" class="form-control" id="pageTitle" placeholder="Enter page title">
+          <div class="pages-container d-flex">
+            <!-- Left: List of Pages -->
+            <div class="pages-list">
+              <ul id="pagesList">
+                <!-- Filled dynamically -->
+              </ul>
             </div>
-            <div class="mb-3">
-              <label for="pageContent" class="form-label">Content</label>
-              <textarea class="form-control" id="pageContent" rows="5" placeholder="Edit page content"></textarea>
+            <!-- Right: Edit Form -->
+            <div class="page-edit-form">
+              <form id="pageForm">
+                <div class="mb-3">
+                  <label for="pageName" class="form-label">Page Name</label>
+                  <input type="text" class="form-control" id="pageName" readonly>
+                </div>
+                <div class="mb-3">
+                  <label for="pageTitle" class="form-label">Page Title</label>
+                  <input type="text" class="form-control" id="pageTitle" placeholder="Enter page title">
+                </div>
+                <div class="mb-3">
+                  <label for="pageDescription" class="form-label">Description</label>
+                  <textarea class="form-control" id="pageDescription" rows="4" placeholder="Enter page description"></textarea>
+                </div>
+                <div class="mb-3">
+                  <label for="backgroundVideo" class="form-label">Background Video URL</label>
+                  <input type="text" class="form-control" id="backgroundVideo" placeholder="Enter background video URL">
+                </div>
+                <button type="submit" class="btn btn-primary">Save Changes</button>
+              </form>
             </div>
-            <button type="submit" class="btn btn-primary">Save Changes</button>
-          </form>
+          </div>
         </div>
         
         <!-- Products Management Section -->
@@ -316,8 +360,19 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     // Mobile sidebar toggle functionality
-    document.getElementById("toggle-btn").addEventListener("click", function() {
-      document.getElementById("sidebar").classList.toggle("open");
+    const sidebar = document.getElementById("sidebar");
+    const toggleBtn = document.getElementById("toggle-btn");
+    toggleBtn.addEventListener("click", function(e) {
+      e.stopPropagation();
+      sidebar.classList.toggle("open");
+    });
+    // Click anywhere outside sidebar closes it on mobile
+    document.addEventListener("click", function(e) {
+      if (window.innerWidth < 768) {
+        if (!sidebar.contains(e.target) && !toggleBtn.contains(e.target)) {
+          sidebar.classList.remove("open");
+        }
+      }
     });
     // Navigation: switch content sections based on sidebar clicks
     const navItems = document.querySelectorAll(".sidebar ul li");
@@ -330,12 +385,73 @@
         const target = this.getAttribute("data-target");
         document.getElementById(target).classList.remove("d-none");
         document.querySelector(".top-navbar h4").innerText = this.innerText;
-        // On mobile, close the sidebar after selecting a section
-        if (window.innerWidth < 768) {
-          document.getElementById("sidebar").classList.remove("open");
-        }
+        if (window.innerWidth < 768) sidebar.classList.remove("open");
       });
     });
+    
+    // Pages Section: Dynamic Page Editor
+    const pagesData = [
+      { id: "home", name: "Home", title: "Welcome to Our Home", description: "This is the home page description.", backgroundVideo: "https://i.imgur.com/OXCPyAw.mp4" },
+      { id: "ecommerce", name: "E-commerce", title: "Shop Now", description: "Our e-commerce page offers the latest products.", backgroundVideo: "" },
+      { id: "offers", name: "Offers", title: "Exclusive Offers", description: "Discover our exclusive offers and deals.", backgroundVideo: "" },
+      { id: "payments", name: "Payments", title: "Secure Payments", description: "Payment details and secure transaction methods.", backgroundVideo: "" },
+      { id: "support", name: "Support", title: "Customer Support", description: "Get help and support from our team.", backgroundVideo: "" }
+    ];
+    const pagesListElem = document.getElementById("pagesList");
+    const pageNameInput = document.getElementById("pageName");
+    const pageTitleInput = document.getElementById("pageTitle");
+    const pageDescriptionInput = document.getElementById("pageDescription");
+    const backgroundVideoInput = document.getElementById("backgroundVideo");
+    let currentPageId = null;
+    function loadPagesList() {
+      pagesListElem.innerHTML = "";
+      pagesData.forEach(page => {
+        const li = document.createElement("li");
+        li.innerText = page.name;
+        li.setAttribute("data-id", page.id);
+        li.addEventListener("click", function() {
+          document.querySelectorAll("#pagesList li").forEach(item => item.classList.remove("active"));
+          this.classList.add("active");
+          loadPageData(this.getAttribute("data-id"));
+        });
+        pagesListElem.appendChild(li);
+      });
+    }
+    function loadPageData(pageId) {
+      currentPageId = pageId;
+      const page = pagesData.find(p => p.id === pageId);
+      if (page) {
+        pageNameInput.value = page.name;
+        pageTitleInput.value = page.title;
+        pageDescriptionInput.value = page.description;
+        backgroundVideoInput.value = page.backgroundVideo;
+      }
+    }
+    document.getElementById("pageForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const updatedPage = {
+        id: currentPageId,
+        name: pageNameInput.value,
+        title: pageTitleInput.value,
+        description: pageDescriptionInput.value,
+        backgroundVideo: backgroundVideoInput.value
+      };
+      const index = pagesData.findIndex(p => p.id === currentPageId);
+      if (index !== -1) {
+        pagesData[index] = updatedPage;
+        alert("Page updated successfully!");
+        console.log("Updated Pages Data:", pagesData);
+      }
+    });
+    // Initialize pages list when the Pages section is active
+    if (document.getElementById("pages")) {
+      loadPagesList();
+      if (pagesData.length > 0) {
+        const firstPageId = pagesData[0].id;
+        document.querySelector("#pagesList li").classList.add("active");
+        loadPageData(firstPageId);
+      }
+    }
   </script>
 </body>
 </html>
